--- a/_data/blog.yml
+++ b/_data/blog.yml
@@ -3,23 +3,26 @@
   href: /blog/
 
 # edit following lines to custom your blog page, make sure name is the same as href but capitalized first letter(except HTML)
-- name: Python
-  href: /python/
+- name: R
+  href: /r/
 
-- name: Linux
-  href: /linux/
+# - name: Python
+#   href: /python/
 
-- name: HTML
-  href: /html/
+# - name: Linux
+#   href: /linux/
 
-- name: Database
-  href: /database/
+# - name: HTML
+#   href: /html/
 
-- name: Mac
-  href: /mac/
+# - name: Database
+#   href: /database/
 
-- name: Life
-  href: /life/
+# - name: Mac
+#   href: /mac/
+
+# - name: Life
+#   href: /life/
 
 # Don't display donation page: change donation to off at file '_config.yml'
 - name: Donate
