--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,5 +2,5 @@
 
 label: Ability
 id : cs
-aspects: GitHub, Motivation, HTML5, ReactJS, Machine Learing, Python, Sleeping
-percentage: 100, 35, 65, 80, 70, 90, 50
+aspects: GitHub, Angular, Flutter, JavaScript, Machine Learing, Python, Sleeping
+percentage: 90, 100, 75, 100, 90, 95, 50
